<resources>
    <string name="app_name">GIF-viewer</string>
    <string name="GIPHY_API_KEY">sXVczCBRV9jVMVPhNdoiyWkwKeI7ZfT4</string>
    <string name="title_activity_scrolling">GIF-viewer</string>
    <string name="action_settings">Параметры</string>
    <string name="search_query_hint">Поиск</string>

    <string name="title_activity_settings">Параметры поиска</string>
    <!-- Preferences -->
    <string name="languages_title">Язык</string>
    <string name="count_title">Количество</string>
    <string name="content_rating_title">Рейтинг контента</string>
    <!-- Default values -->
    <string name="language_default">en</string>
    <string name="limit_default">25</string>
    <string name="content_rating_default">g</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>